[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bolt"
version = "0.1.0"
# dynamic = ["version"]
description = "Benchmarks for BO on LLM Tasks"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ruth Chew"}]
keywords = ["Bayesian optimization", "Benchmark"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10"
dependencies = [
    "botorch>=0.16.1",
    "datasets",
    "pandas",
    "torch>=2.9.1",
    "numpy>=2.2.0",
    "huggingface_hub>=0.36.0",
    "safetensors>=0.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov",
  "ruff",
]
docs = [
  "mkdocs-material",
  "mkdocstrings[python]",
  "pygments"
]

[tool.hatch.build.targets.wheel]
packages = ["bolt"]

[tool.ruff]
line-length = 88
src = ["bolt"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["bolt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=bolt --cov-report=term-missing"
